kubernetes/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronohancer-mysql
  namespace: chronohancer
spec:
  selector:
    matchLabels:
      app: chronohancer-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chronohancer-mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: chronohancer-mysql-storage
---
apiVersion: v1
kind: Service
metadata:
  name: chronohancer-mysql
  namespace: chronohancer
spec:
  ports:
  - port: 3306
  selector:
    app: chronohancer-mysql
  clusterIP: None
